# crewaiBasics

./: .gitignore  pyproject.toml
src/guide_creator_flow/: main.py
src/guide_creator_flow.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/guide_creator_flow/crews/: test_research.py
src/guide_creator_flow/crews/content_crew/config/: agents.yaml
src/guide_creator_flow/crews/marketing_crew/: marketing_crew.py
src/guide_creator_flow/crews/marketing_crew/config/: agents.yaml
src/guide_creator_flow/crews/research_crew/: __init__.py  research_crew.py
src/guide_creator_flow/crews/research_crew/config/: agents.yaml  tasks.yaml
