[project]
name = "guide_creator_flow"
version = "0.1.0"
description = "guide_creator_flow using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[litellm,tools]==1.14.3",
]

[project.scripts]
kickoff = "guide_creator_flow.main:kickoff"
run_crew = "guide_creator_flow.main:kickoff"
plot = "guide_creator_flow.main:plot"
run_with_trigger = "guide_creator_flow.main:run_with_trigger"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.crewai]
type = "flow"

[dependency-groups]
dev = [
    "crewai>=1.14.3",
]
